<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rt_panoptic_ros2</name>
  <version>0.0.1</version>
  <description>ROS 2 Wrapper for realtime_panoptic</description>
  <maintainer email="pradhan.shrijal@gmail.com">Shrijal Pradhan</maintainer>
  <license>MIT</license>

  <exec_depend>vision_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
